SONARPY-2046: Fix missing enrichment of tokens